<resources>
    <string name="app_name">SMSMe</string>
    <string name="activity_sent">Sent messages</string>


    <string name="activity_new_message">New conversation</string>
    <string name="enter_recipients">Recipient…</string>
    <string name="enter_contact">Enter recipient</string>
    <string name="enter_message">Enter message…</string>
    <string name="background">Background</string>
    <string name="send_message">SEND</string>

    <string name="action_settings">Settings</string>
    <string name="show_full_message">Show full mesasge</string>
    <string name="sent_messages">Sent messages</string>

    <string name="contact_photo">Contact photo</string>
    <string name="contact_image">Contact image</string>


    <string name="reply">Reply</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="app_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="delete_message">This conversation will be deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permanently_message_delete">Permanently delete conversation!</string>

    <string name="sms_message">SMS conversation</string>

    <string name="message_is_missing">MessageDTO is missing!</string>
    <string name="sending_failed">Sending failed</string>
    <string name="message_sent">MessageDTO sent</string>


    <string name="_05_15">05:15</string>

    <string name="allow_permission">Please allow permission!</string>
    <string name="permission_already_granted">Permission already granted</string>
    <string name="permission_granted">Permission GRANTED</string>
    <string name="permission_denied">Permission DENIED</string>

    <string name="last_letter_count">/1</string>
    <string name="select_picture">Select picture</string>
    <string name="messages">Messages</string>

    <!-- bottom navigation-->
    <string name="title_messages">Conversations</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_favorites">Favorites</string>

    <!-- toolbar menu -->
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="recipent_button">addContactAsRecipentButton</string>
    <string name="new_message">New conversation</string>




    <string name="open_camera_image">Open camera to take an image</string>
    <string name="open_apps">Open and choose applications</string>
    <string name="undo_enter_message">"Shrink enter message area to revile icons for camera and gallery "</string>
    <string name="open_gallery">Open gallery</string>


</resources>
