<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/etReceipent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/contactFoto"
        android:layout_toLeftOf="@+id/contactFoto"
        android:hint="@string/enter_recipients"
        android:inputType="phone|textPersonName"
        android:paddingLeft="10dp"
        android:paddingBottom="20dp"
        android:textColor="#FF424242"
        android:translationY="10dp" />

    <ImageView
        android:id="@+id/contactFoto"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/etReceipent"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_action_person_pin"
        android:clickable="true"
        android:contentDescription="@string/enter_contact"
        android:onClick="pickContacts"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/bakground"
        android:layout_width="wrap_content"
        android:layout_height="142dp"
        android:layout_below="@+id/contactFoto"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#fff3e0"
        android:contentDescription="@string/background" />


    <EditText
        android:id="@+id/etMessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bakground"
        android:layout_alignEnd="@+id/etReceipent"
        android:layout_alignRight="@+id/etReceipent"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@+id/imageButton"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="start"
        android:hint="@string/enter_message"
        android:inputType="textMultiLine"
        android:maxLength="160"
        android:paddingLeft="10dp"
        android:textColor="#FF424242"
        android:visibility="visible"
        android:windowSoftInputMode="adjustPan|adjustResize" />

    <requestFocus />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bakground"
        android:layout_alignEnd="@+id/contactFoto"
        android:layout_alignRight="@+id/contactFoto"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_action_send"
        android:contentDescription="@string/send_message" />


    <TextView
        android:id="@+id/sms_count"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="25dp" />


</RelativeLayout>

